# Eqiva-Smart-Radiator-Thermostat

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  api.py  dht_test.py  eqiva.py  example.py  install.sh  pwm_fan.py  pyproject.toml  requirements.txt  service_explorer.py  setup.py  status_store.yaml
.github/workflows/: ci.yml  release.yml
api/: __init__.py  config.py
api/middleware/: __init__.py
api/models/: thermostat.py
api/routes/: dht_routes.py  homekit_routes.py  system_routes.py
api/services/: dht_service.py  thermostat_service.py
eqiva/: Alias.py  Event.py  MyLogger.py  OpenWindowConfig.py  Program.py  Temperature.py  Thermostat.py  ThermostatCLI.py  ThermostatController.py  Vacation.py  eqiva.py
eqiva_thermostat/: __init__.py
eqiva_thermostat/utils/: Alias.py  EqivaException.py  Event.py  Listener.py  Mode.py  MyLogger.py  OpenWindowConfig.py  Program.py  Temperature.py  Thermostat.py  ThermostatCLI.py  ThermostatController.py  Vacation.py  __init__.py
pwm_fan/: pwm_fan.py
utils/: Alias.py  DHT.py  Event.py  Mode.py  OpenWindowConfig.py  Temperature.py  Thermostat.py  ThermostatCLI.py  ThermostatController.py  scan.py
